# pycodetags

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pylintrc_tests  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG_DRAFT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  Makefile  README.md  basic_plugins.sh  basic_test.sh  basic_test_with_logging.sh  example.py  example_2.py  make_issues.sh  make_prompt.sh  mkdocs.yml  perf.py  private_dictionary.txt  pycodetags.flat.md  pyproject.toml  redo.sh  scratch.py  tox.ini
demo/: pep_350_exact.py
demo_reports/: CHANGELOG.md  default.txt  todo.json  todo.md  todo.txt
docs/: CHANGELOG.md  CONTRIBUTING.md  FAQ.md  PLUGIN_DESIGN.md  PRIOR_ART.md  PRIOR_ART_TODO_OBJECTS.md  TASKS.md  data_tags.md  getting_started.md  index.md  installation.md  plugin_code_review.md  plugin_discussion.md  plugin_how_to.md  plugin_issue_tracker.md  plugin_list.md  requirements.txt  usage.md
docs_site/: pelicanconf.py  publishconf.py  tasks.py
docs_wip/: DATA_MODEL.md  DESIGN_PRE_PLUGINS.md  ROUGH_POINTS.md  TASKS.md  TODO.md  pycodetags_design_doc.md
onhold/: todo_exception.py
plugins/: README.md  views_rss.py
plugins/pycodetags_issue_tracker_gh_sync/: Makefile  pyproject.toml
plugins/pycodetags_issue_tracker_gh_sync/pycodetags_github_issues_sync/: __about__.py  main.py
plugins/pycodetags_to_sqlite/: Makefile  pyproject.toml
plugins/pycodetags_to_sqlite/pycodetags_to_sqlite/: __about__.py  cli.py  main.py  view_sqlite.py
pycodetags/: _TODO.py  __about__.py  __init__.py  __main__.py  aggregate.py  collect.py  config.py  (+23 more)
(+144 files in other folders)
