[project]
name = "pycodetags-github-issues-sync"
version = "0.1.0"
description = "A github issues sync plugin for pycodetags"
dependencies = [
        "pycodetags>=0.6.0",
    "pluggy",

     # backwards compatibility
    "toml; python_version < '3.11'",
    "importlib-resources; python_version < '3.9'",
    "typing_extensions ; python_version < '3.8'",

]

[project.entry-points."pycodetags"] # This is the crucial part for pluggy
# The key "markdojira_syncwn_view" is the name of the plugin (can be anything unique)
# The value "pycodetags_github_issues_sync" is the module where pluggy should look for @hookimpls
pycodetags_github_issues_sync = "pycodetags_github_issues_sync.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"