[project]
name = "pycodetags-to-sqlite"
version = "0.1.0"
description = "A markdown view plugin for pycodetags"
dependencies = [
    # "pycodetags"
]

[project.entry-points."pycodetags"] # This is the crucial part for pluggy
# The key "pycodetags_to_sqlite" is the name of the plugin (can be anything unique)
# The value "pycodetags_to_sqlite" is the module where pluggy should look for @hookimpls
pycodetags_to_sqlite = "pycodetags_to_sqlite.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"